--- a/styles/PageStyles/info.module.css
+++ b/styles/PageStyles/info.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     padding-top: 5rem;
+    color:white
 } 
 
 .title {
@@ -18,21 +19,4 @@
     padding: 1rem;
 }
 
-.btn{
-    background-color: #fc266b;
-    color: #fff;
-    text-decoration: none;
-    height: 3rem;
-    width: 8rem;
-    display: flex;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 18px;
-    border: none;
-    padding: 1%;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
-    margin-top: 8vh;
-}
 
