--- a/styles/ComponentStyles/NavBar.module.css
+++ b/styles/ComponentStyles/NavBar.module.css
@@ -21,6 +21,9 @@
     padding-right: 1rem;
     text-decoration: none;
 }
+.loginContent:hover{
+    color: coral;
+}
 
 .title {
     padding-left: 1rem;
